<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".ui.siteAdd.FragmentSiteAdd">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_siteList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_site_name"
        style="@style/Theme.CloudRaya.InputSiteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/site_name"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/siteName_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_siteList" />


    <com.bangkit.cloudraya.customview.MyEditText
        android:id="@+id/siteName_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_person_icon"
        android:drawablePadding="12dp"
        android:hint="@string/hint_siteName"
        android:padding="10dp"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_site_name" />


    <TextView
        android:id="@+id/tv_site_url"
        style="@style/Theme.CloudRaya.InputSiteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/site_url"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/siteName_layout" />


    <com.bangkit.cloudraya.customview.MyEditText
        android:id="@+id/siteUrl_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_url_icon"
        android:drawablePadding="12dp"
        android:hint="@string/hint_siteUrl"
        android:padding="10dp"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_site_url" />


    <TextView
        android:id="@+id/tv_app_key"
        style="@style/Theme.CloudRaya.InputSiteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/app_key"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/siteUrl_layout" />


    <com.bangkit.cloudraya.customview.MyEditText
        android:id="@+id/appKey_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_key_icon"
        android:drawablePadding="12dp"
        android:hint="@string/hint_appKey"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:textSize="18sp"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_key" />


    <TextView
        android:id="@+id/tv_app_secret"
        style="@style/Theme.CloudRaya.InputSiteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/app_secret"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appKey_layout" />

    <com.bangkit.cloudraya.customview.MyEditText
        android:id="@+id/appSecret_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_icon"
        android:drawablePadding="12dp"
        android:hint="@string/hint_appSecret"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="18sp"
        app:isPassword="true"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_secret" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        style="@style/Theme.CloudRaya.PrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>