<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/tvName"
            style="@style/Theme.CloudRaya.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/name"
            android:textSize="18sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLocation"
            style="@style/Theme.CloudRaya.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="10dp"
            android:text="@string/location"
            card_view:drawableStartCompat="@drawable/ic_location"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tvName" />

        <TextView
            android:id="@+id/tvImage"
            style="@style/Theme.CloudRaya.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="10dp"
            android:text="@string/image"
            card_view:drawableStartCompat="@drawable/ic_disc"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tvLocation" />

        <TextView
            android:id="@+id/tvIPAddress"
            style="@style/Theme.CloudRaya.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="8dp"
            android:text="@string/ip_address"
            card_view:drawableStartCompat="@drawable/ic_ip_address"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tvImage" />

        <TextView
            android:id="@+id/tvStatus"
            style="@style/Theme.CloudRaya.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="5dp"
            android:text="@string/status"
            android:textAlignment="textEnd"
            card_view:drawableStartCompat="@drawable/ic_active"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tvIPAddress" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>